# horse-tinder-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py
app/: main.py
app/api/v1/: admin.py  auth.py  horse_photos.py  horses.py  matches.py  messages.py  notifications.py  router.py  search.py  swipes.py  users.py
app/core/: config.py  dependencies.py  exceptions.py  middleware.py  rate_limiter.py  security.py  url_validator.py
app/db/: seed.py  session.py
app/models/: __init__.py  base.py  horse.py  match.py  message.py  notification.py  swipe.py  user.py
app/schemas/: auth.py  horse.py  match.py  message.py  notification.py  pagination.py  search.py  swipe.py  user.py
app/services/: auth_service.py  horse_service.py  match_service.py  message_service.py  notification_service.py  photo_service.py  search_service.py  swipe_service.py  user_service.py
tests/: conftest.py
tests/integration/: test_admin.py  test_auth.py  test_horses.py  test_messages.py  test_search.py  test_swipes_matches.py
tests/security/: test_auth_security.py  test_bola.py  test_business_flow.py  test_function_auth.py  test_inventory.py  test_misconfiguration.py  test_property_auth.py  test_resource_limits.py  test_ssrf.py
tests/unit/: test_schemas.py  test_security.py  test_url_validator.py
